raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image
{
    void *data;  
    int width;   
    int height;  
    int mipmaps; 
    int format;  
} Image;
typedef struct Texture2D
{
    unsigned int id; 
    int width;       
    int height;      
    int mipmaps;     
    int format;      
} Texture2D;
typedef struct Camera3D
{
    Vector3 position; 
    Vector3 target;   
    Vector3 up;       
    float fovy;       
    int type;         
} Camera3D;
typedef struct BoundingBox
{
    Vector3 min; 
    Vector3 max; 
} BoundingBox;
typedef struct Mesh
{
    int vertexCount;   
    int triangleCount; 
    float *vertices;         
    float *texcoords;        
    float *texcoords2;       
    float *normals;          
    float *tangents;         
    unsigned char *colors;   
    unsigned short *indices; 
    float *baseVertices; 
    float *baseNormals;  
    float *weightBias;   
    int *weightId;       
    unsigned int vaoId;    
    unsigned int vboId[7]; 
} Mesh;
typedef struct Shader
{
    unsigned int id;                
    int locs[MAX_SHADER_LOCATIONS]; 
} Shader;
typedef struct MaterialMap
{
    Texture2D texture; 
    Color color;       
    float value;       
} MaterialMap;
typedef struct Material
{
    Shader shader;                       
    MaterialMap maps[MAX_MATERIAL_MAPS]; 
    float *params;                       
} Material;
typedef struct Model
{
    Mesh mesh;         
    Matrix transform;  
    Material material; 
} Model;
typedef struct Ray
{
    Vector3 position;  
    Vector3 direction; 
} Ray;
typedef struct RayHitInfo
{
    bool hit;         
    float distance;   
    Vector3 position; 
    Vector3 normal;   
} RayHitInfo;
typedef struct Wave
{
    unsigned int sampleCount; 
    unsigned int sampleRate;  
    unsigned int sampleSize;  
    unsigned int channels;    
    void *data;               
} Wave;
typedef struct Sound
{
    void *audioBuffer; 
    unsigned int source; 
    unsigned int buffer; 
    int format;          
} Sound;
typedef struct MusicData *Music;
typedef struct VrDeviceInfo
{
    int hResolution;               
    int vResolution;               
    float hScreenSize;             
    float vScreenSize;             
    float vScreenCenter;           
    float eyeToScreenDistance;     
    float lensSeparationDistance;  
    float interpupillaryDistance;  
    float lensDistortionValues[4]; 
    float chromaAbCorrection[4];   
} VrDeviceInfo;
    RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                                       
    RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color);              
    RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);                                
    RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                                          
    RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);                           
    RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color);      
    RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                                        
    RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);                               
    RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);                            
    RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color);      
    RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
    RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                                         
    RLAPI void DrawRay(Ray ray, Color color);                                                                                   
    RLAPI void DrawGrid(int slices, float spacing);                                                                             
    RLAPI void DrawGizmo(Vector3 position);                                                                                     
    RLAPI Model LoadModel(const char *fileName); 
    RLAPI Model LoadModelFromMesh(Mesh mesh);    
    RLAPI void UnloadModel(Model model);         
    RLAPI Mesh LoadMesh(const char *fileName);              
    RLAPI void UnloadMesh(Mesh *mesh);                      
    RLAPI void ExportMesh(Mesh mesh, const char *fileName); 
    RLAPI BoundingBox MeshBoundingBox(Mesh mesh); 
    RLAPI void MeshTangents(Mesh *mesh);          
    RLAPI void MeshBinormals(Mesh *mesh);         
    RLAPI Mesh GenMeshPoly(int sides, float radius);                          
    RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);   
    RLAPI Mesh GenMeshCube(float width, float height, float length);          
    RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);            
    RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);        
    RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);       
    RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides); 
    RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);  
    RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);               
    RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);             
    RLAPI Material LoadMaterial(const char *fileName); 
    RLAPI Material LoadMaterialDefault(void);          
    RLAPI void UnloadMaterial(Material material);      
    RLAPI void DrawModel(Model model, Vector3 position, float scale, Color tint);                                                     
    RLAPI void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint);      
    RLAPI void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                                                
    RLAPI void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
    RLAPI void DrawBoundingBox(BoundingBox box, Color color);                                                                         
    RLAPI void DrawBillboard(Camera camera, Texture2D texture, Vector3 center, float size, Color tint);                               
    RLAPI void DrawBillboardRec(Camera camera, Texture2D texture, Rectangle sourceRec, Vector3 center, float size, Color tint);       
    RLAPI bool CheckCollisionSpheres(Vector3 centerA, float radiusA, Vector3 centerB, float radiusB);                   
    RLAPI bool CheckCollisionBoxes(BoundingBox box1, BoundingBox box2);                                                 
    RLAPI bool CheckCollisionBoxSphere(BoundingBox box, Vector3 centerSphere, float radiusSphere);                      
    RLAPI bool CheckCollisionRaySphere(Ray ray, Vector3 spherePosition, float sphereRadius);                            
    RLAPI bool CheckCollisionRaySphereEx(Ray ray, Vector3 spherePosition, float sphereRadius, Vector3 *collisionPoint); 
    RLAPI bool CheckCollisionRayBox(Ray ray, BoundingBox box);                                                          
    RLAPI RayHitInfo GetCollisionRayModel(Ray ray, Model *model);                                                       
    RLAPI RayHitInfo GetCollisionRayTriangle(Ray ray, Vector3 p1, Vector3 p2, Vector3 p3);                              
    RLAPI RayHitInfo GetCollisionRayGround(Ray ray, float groundHeight);                                                
    RLAPI char *LoadText(const char *fileName);                              
    RLAPI Shader LoadShader(const char *vsFileName, const char *fsFileName); 
    RLAPI Shader LoadShaderCode(char *vsCode, char *fsCode);                 
    RLAPI void UnloadShader(Shader shader);                                  
    RLAPI Shader GetShaderDefault(void);     
    RLAPI Texture2D GetTextureDefault(void); 
    RLAPI int GetShaderLocation(Shader shader, const char *uniformName);                                      
    RLAPI void SetShaderValue(Shader shader, int uniformLoc, const void *value, int uniformType);             
    RLAPI void SetShaderValueV(Shader shader, int uniformLoc, const void *value, int uniformType, int count); 
    RLAPI void SetShaderValueMatrix(Shader shader, int uniformLoc, Matrix mat);                               
    RLAPI void SetMatrixProjection(Matrix proj);                                                              
    RLAPI void SetMatrixModelview(Matrix view);                                                               
    RLAPI Matrix GetMatrixModelview();                                                                        
    RLAPI Texture2D GenTextureCubemap(Shader shader, Texture2D skyHDR, int size);     
    RLAPI Texture2D GenTextureIrradiance(Shader shader, Texture2D cubemap, int size); 
    RLAPI Texture2D GenTexturePrefilter(Shader shader, Texture2D cubemap, int size);  
    RLAPI Texture2D GenTextureBRDF(Shader shader, int size);                          
    RLAPI void BeginShaderMode(Shader shader);                        
    RLAPI void EndShaderMode(void);                                   
    RLAPI void BeginBlendMode(int mode);                              
    RLAPI void EndBlendMode(void);                                    
    RLAPI void BeginScissorMode(int x, int y, int width, int height); 
    RLAPI void EndScissorMode(void);                                  
    RLAPI VrDeviceInfo GetVrDeviceInfo(int vrDeviceType); 
    RLAPI void InitVrSimulator(VrDeviceInfo info);        
    RLAPI void UpdateVrTracking(Camera *camera);          
    RLAPI void CloseVrSimulator(void);                    
    RLAPI bool IsVrSimulatorReady(void);                  
    RLAPI void ToggleVrMode(void);                        
    RLAPI void BeginVrDrawing(void);                      
    RLAPI void EndVrDrawing(void);                        
    RLAPI void InitAudioDevice(void);         
    RLAPI void CloseAudioDevice(void);        
    RLAPI bool IsAudioDeviceReady(void);      
    RLAPI void SetMasterVolume(float volume); 
    RLAPI Wave LoadWave(const char *fileName);                                                        
    RLAPI Wave LoadWaveEx(void *data, int sampleCount, int sampleRate, int sampleSize, int channels); 
    RLAPI Sound LoadSound(const char *fileName);                                                      
    RLAPI Sound LoadSoundFromWave(Wave wave);                                                         
    RLAPI void UpdateSound(Sound sound, const void *data, int samplesCount);                          
    RLAPI void UnloadWave(Wave wave);                                                                 
    RLAPI void UnloadSound(Sound sound);                                                              
    RLAPI void ExportWave(Wave wave, const char *fileName);                                           
    RLAPI void ExportWaveAsCode(Wave wave, const char *fileName);                                     
    RLAPI void PlaySound(Sound sound);                                               
    RLAPI void PauseSound(Sound sound);                                              
    RLAPI void ResumeSound(Sound sound);                                             
    RLAPI void StopSound(Sound sound);                                               
    RLAPI bool IsSoundPlaying(Sound sound);                                          
    RLAPI void SetSoundVolume(Sound sound, float volume);                            
    RLAPI void SetSoundPitch(Sound sound, float pitch);                              
    RLAPI void WaveFormat(Wave *wave, int sampleRate, int sampleSize, int channels); 
    RLAPI Wave WaveCopy(Wave wave);                                                  
    RLAPI void WaveCrop(Wave *wave, int initSample, int finalSample);                
    RLAPI float *GetWaveData(Wave wave);                                             
    RLAPI Music LoadMusicStream(const char *fileName);    
    RLAPI void UnloadMusicStream(Music music);            
    RLAPI void PlayMusicStream(Music music);              
    RLAPI void UpdateMusicStream(Music music);            
    RLAPI void StopMusicStream(Music music);              
    RLAPI void PauseMusicStream(Music music);             
    RLAPI void ResumeMusicStream(Music music);            
    RLAPI bool IsMusicPlaying(Music music);               
    RLAPI void SetMusicVolume(Music music, float volume); 
    RLAPI void SetMusicPitch(Music music, float pitch);   
    RLAPI void SetMusicLoopCount(Music music, int count); 
    RLAPI float GetMusicTimeLength(Music music);          